Updating images and things.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,9 @@
+@Article{fluhrer-lucksl,
+author = {Scott R. Fluhrer and Stefan Lucks},
+title = {Analysis of the E0 Encryption System},
+year = {2001}
+}
+
 @Article{chris-collins,
 author = {Chris Collins},
 title = {A Comparative Analysis of Mark 1, Colossus and Zuse Z4},
@@ -80,3 +86,4 @@ author = {Joan Daemen and Vincent Rijmen},
 title = {AES Proposal: Rijndael},
 year = {1998}
 }
+
