--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -87,3 +87,15 @@ title = {AES Proposal: Rijndael},
 year = {1998}
 }
 
+@Article{andreas-klein,
+author = {Andreas Klein},
+title = {Attacks on the RC4 stream cipher},
+year = {2006}
+}
+
+@Article{eric-filiol,
+author = {Eric Filiol},
+title = {A new statistical testing for symmetric ciphers and hash functions},
+year = {2002}
+}
+
