--- a/capitulos/5-algoritmo.tex
+++ b/capitulos/5-algoritmo.tex
@@ -72,7 +72,7 @@ while(plainText != EOF)
 		}
 		count++;
 	}
-	if(tabela[plainText[k] ^ S[k] == '1'){
+	if(table[plainText[k] ^ S[k] == '1'){
 		if(j == 0){
 			output(signal);
 			S[old] = S[k+1];
