--- a/fixos/setup.tex
+++ b/fixos/setup.tex
@@ -66,7 +66,7 @@ commentstyle=\color{blue},
 literate={á}{{\'a}}1 {à}{{\`a}}1 {ã}{{\~a}}1 {é}{{\'e}}1 {É}{{\'E}}1 {ê}{{\^e}}1 {õ}{{\~o}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1 {ç}{{\c c}}1 {³}{{$^3$}}1 {Ω}{{$\Omega$}}1,
 breaklines=true,
 showstringspaces=false,
-stringstyle=\color{cyan},
+stringstyle=\color{brown},
 basicstyle=\small\ttfamily,
 keywordstyle=\color{red}}
 
