--- a/capitulos/8-conclusao.tex
+++ b/capitulos/8-conclusao.tex
@@ -6,10 +6,10 @@ Conforme visto ao longo deste trabalho, existem formas de se obter informações
 
 Existem diversas técnicas de criptoanálise. Uma dessas é a análise de frequência de ocorrência de caracteres de um texto cifrado. Com essa técnica, o atacante pode ter acesso ao texto em claro, utilizando referências de frequência de ocorrência média de caracteres para cada idioma. O algoritmo, neste trabalho proposto, tem como foco dificultar a utilização dessa técnica, pois as frequências de ocorrência dos caracteres do texto cifrado serão balanceadas e assim torna-se impossível determinar qual caractere terá maior frequência no mesmo.
 
-Outro ataque conhecido como \textit{Statistical Mobius Analysis} tem como hipótese que um sistema de criptografia obedece a uma geração de bytes com distribuição fixa\cite{eric-filiol}. Como o algoritmo proposto não utiliza todos os \textit{bytes} que são produzidos pelo gerador pseudo aleatório (em cada conflito alguns \textit{bytes} são desprezados, os quais dependem da sequência pseudo aleatória gerada e também do texto em claro que está sendo cifrado) este ataque não funcionaria sobre uma mensagem cifrada utilizando o algoritmo proposto.
+Outro ataque conhecido como \textit{Statistical Mobius Analysis} tem como hipótese  que um sistema criptográfico(tal como um gerador pseudo aleatório) obedece a uma geração de \textit{bytes} com distribuição fixa\cite{eric-filiol}. Como o algoritmo proposto neste trabalho não utiliza todos os \textit{bytes} que são produzidos pelo gerador pseudo aleatório(em cada conflito em sua tabela interna alguns \textit{bytes} da sequência pseudo aleatória precisam ser descartados, dependendo do texto em claro que está sendo cifrado) este ataque não funcionaria sobre uma mensagem cifrada utilizando o algoritmo proposto.
 
-Há também um ataque que faz relação entre a saída do gerador de \textit{bytes} e seus estados internos(i, j). Para realizar esse ataque ele utiliza um contador \textbf{i} que ele determina e descreve um teorema provando que para uma distribuição com os estados internos uniformes ele obtém duas opções de resultados de \textit{bytes} para o gerador \cite{andreas-klein}. Após alguns testes ele consegue determinar que sua hipótese estava correta e que por essa abordagem é possível determinar todos os \textit{bytes} gerados do \textit{RC4}. O algoritmo proposto também mitiga esse problema, visto que muito \textit{bytes} gerados são descartados e que isso pode confundir o atacante, sobre qual é usado e qual não é.
-
+\cite[*]{andreas-klein} propõe um ataque utilizando uma relação, descoberta por ele, entre a saída do gerador pseudo aleatório e os estados internos do \textit{RC4}. Dada uma distribuição de estados internos uniformes Klein obtém duas sequências possíveis de \textit{bytes} que serão gerados pelo gerador pseudo aleatório. Por essa abordagem é possível determinar todos os \textit{bytes} que serão produzidos pelo \textit{RC4}. O algoritmo proposto neste trabalho também mitiga esse ataque, pois o descarte de \textit{bytes} da sequência pseudo aleatória( que ocorre durante a resolução de conflitos em sua tabela interna) confunde as previsões de um atacante que utiliza a relação de Klein.
+ 
 Após a execução dos experimentos, podemos afirmar que a utilização do algoritmo em conjunto com o \textit{RC4} é possível com um impacto pequeno no desempenho do tempo total. Algumas observações devem ser feitas, por exemplo:
 
 \begin{enumerate}
