--- a/capitulos/7-resultados.tex
+++ b/capitulos/7-resultados.tex
@@ -138,14 +138,14 @@ Com esses resultados obtivemos em média 4,34\% de tempo a mais. A maior porcent
 
 \subsection{Resolução de Conflitos}
 
-Esse experimento visa dar maior visibilidade sobre a quantidade média de conflitos que ocorrem em diversos tamanhos de textos e o tempo médio das resoluções. Esses tempos podem ter uma variação, visto que para cada conflito a função de obter o tempo do sistema foi utilizada duas vezes. Para textos pequenos a variação pode ser pequena, porém a medida que o texto fica maior, esse tempo tende a aumentar também.(Rever isso aqui, será mesmo que afeta o tempo de conflito ou só o tempo total?). A tabela \ref{amount-conflicts} mostra os resultados obtidos.
+Esse experimento visa dar maior visibilidade sobre a quantidade média de conflitos que ocorrem em diversos tamanhos de textos e o tempo médio das resoluções. Esses tempos podem ter uma variação, visto que para cada conflito a função de obter o tempo do sistema foi utilizada duas vezes. Para textos pequenos a variação pode ser pequena, porém a medida que o texto fica maior, esse tempo tende a aumentar também. A tabela \ref{amount-conflicts} mostra os resultados obtidos.
 
 \begin{table}[h]
 \centering
 \begin{tabular}{|p{3cm}|c|c|p{3cm}|}
 \hline
 Tamanho do texto(caracteres) & Tempo Extra(ms) & Quantidade de Conflitos & Tempo médio de resolução(ms) \\ \hline
-\centering 10.000                        & 10.4            & 5.037                    \centering & 0.002065                     \\ \hline
+\centering 10.000                        & 10.4            & 5.037                    \centering & 0.002065               \\ \hline
 \centering 50.000                       & 32.8            & 25.174                   \centering &  0.001303                     \\ \hline
 \centering 100.000                      & 67              & 49.998                   \centering & 0.001340                     \\ \hline
 \centering 500.000                      & 313.7           & 250.086                  \centering & 0.001254                     \\ \hline
