--- a/editaveis/agradecimentos.tex
+++ b/editaveis/agradecimentos.tex
@@ -1,1 +1,14 @@
+\begin{agradecimentos}
 
+Agradeço ao professor doutor Luiz Laranjeira por ter aceito ser meu orientador e pelas suas ideias, que tornaram possível a finalização deste trabalho.
+
+Agradeço aos meus pais, por todo o carinho e apoio que me deram durante minha vida. Ao meu pai, João, pelos conselhos, incentivo e ajuda, não somente durante a minha graduação, mas em todos os momentos de minha vida. À minha mãe, Rosene, pela paciência e amor durante os momentos críticos desta jornada.
+
+Agradeço aos meus irmãos, por sempre estarem do meu lado. Ao meu irmão Lucas, que apesar de nos desentendermos muito, sei que nos amamos e nos apoiamos. Ao meu irmão Victor, que sempre foi muito paciente e amoroso.
+
+Agradeço aos meus avôs, que sempre apoiaram minhas decisões e sempre me deram palavras de conforto e incentivo.
+
+Agradeço aos professores da FGA, que transmitem seus conhecimentos aos alunos na esperança de que nos tornaremos profissionais melhores.
+
+E por fim, agradeço aos amigos que fiz durante a minha graduação, em especial o Matheus Tristão, Charles de Oliveira e aos amigos do laboratório LAPPIS. 
+\end{agradecimentos}
