--- a/editaveis/epigrafe.tex
+++ b/editaveis/epigrafe.tex
@@ -1,1 +1,7 @@
-
+\begin{epigrafe}
+    \vspace*{\fill}
+	\begin{flushright}
+		\textit{Do what you can,\\ with what you have,\\ where you are.\\}
+		\textbf{Theodore Roosevelt}
+	\end{flushright}
+\end{epigrafe}
